--- a/style.css
+++ b/style.css
@@ -2,8 +2,28 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 h1{
-    font-family:orange;
+    font-size: 50px;
 }
 .orange-color{
-    font-size: 50px;
+    color:orange;
+}
+section{
+    display:flex;
+}
+.half-width{
+    width: 50%;
+    padding-left: 2%;
+}
+.half-width img{
+    width: 80%;
+
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(orange tomato);
+    padding:10px 40px;
+    color:white;
+    font-weight: 700;
+    border-radius: 5px;
+
 }
