--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ h1{
 }
 section{
     display:flex;
+    margin-bottom:100px;
 }
 .half-width{
     width: 50%;
@@ -20,10 +21,17 @@ section{
 }
 .link-button{
     text-decoration: none;
+    background-color:orange;
     background-image: linear-gradient(orange tomato);
+
     padding:10px 40px;
     color:white;
     font-weight: 700;
     border-radius: 5px;
 
+}
+.shape{
+    background-image: url(images/shapes/Frame\ 57.jpg);
+    
+    background-position: 100%;
 }
