--- a/style.css
+++ b/style.css
@@ -12,12 +12,16 @@ section{
     margin-bottom:100px;
 }
 .half-width{
+    justify-content:center;
+    margin:20px 80px ;
+
     width: 50%;
     padding-left: 2%;
     
 }
 .half-width img{
     width: 80%;
+    height: 700px;
 
 }
 .link-button{
